# vkRenderProto

./: .gitignore  CMakeLists.txt  Common.h  Engine.cpp  HelloTriangle.cpp  HelloTriangle.h  README.md  Utils.cpp  Utils.h  Validator.cpp  Validator.h  instance.h  main.cpp
.github/workflows/: cmake.yml
include/GLFW/: glfw3.h
model/: model.h
src/: Engine.h  HelloTriangle.cpp  HelloTriangle.h  ShaderLoader.cpp  Utils.cpp  Utils.h  Validator.cpp  Validator.h  instance.h  main.cpp
src/include/vulkan/: vk_enum_string_helper.h  vulkan.hpp  vulkan_raii.hpp
src/model/: mesh.cpp  mesh.h  mesh_manager.h  model.h  vk_types.h
src/shaders/: compile.bat  compile.sh
